<resources>
    <string name="app_name">My Community</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Active Tasks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="title_activity_new_issue">New Issue</string>
    <string name="title_hint">enter title</string>
    <string name="description_hint">enter description</string>
    <string name="bid_hint">enter bid amount in Rs.</string>
    <string name="create">create</string>
    <string name="location_hint">enter issue location</string>
    <string name="title_activity_issue_detail">IssueDetailActivity</string>
    <string name="add_fund">Add Fund</string>
    <string name="take_up_issue">take up issue</string>
    <string name="ok">ok</string>
    <string name="save">save</string>
    <string name="submit">submit</string>
    <string name="title_activity_confirm">ConfirmActivity</string>
    <string name="title_activity_splash">SplashActivity</string>


</resources>
