<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="io.github.dnivra26.cleansweep.NewIssueActivity">

    <ImageView
        android:id="@+id/issue_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="30dp"
        android:src="@drawable/camera_icon" />

    <EditText
        android:id="@+id/issue_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/title_hint" />

    <EditText
        android:id="@+id/issue_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:paddingTop="10dp"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/issue_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/location_hint" />

    <EditText
        android:id="@+id/initial_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/bid_hint"
        android:inputType="number" />

    <Button
        android:paddingTop="0dp"
        android:id="@+id/create_issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/buttonNormal"
        android:text="@string/create" />


</LinearLayout>
