<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.dnivra26.cleansweep.IssueDetailActivity">

    <com.parse.ParseImageView
        android:id="@+id/issue_image"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/label_issue_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_issue_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10" />

    <TextView
        android:id="@+id/label_issue_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_total_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <Button
        android:id="@+id/add_bid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_fund" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_fund_layout"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/new_bid_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/bid_hint" />

        <Button
            android:id="@+id/add_fund_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

    <Button
        android:id="@+id/take_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_up_issue" />

</LinearLayout>
